<resources>
    <string name="app_name">Spenndify</string>
    <string name="login">Login</string>
    <string name="get_started">GET STARTED</string>
    <string name="spenndify_white_logo">Spenndify white logo</string>
    <string name="help">Help</string>
    <string name="good_morning_steve_your_growth_your_future">Good Morning ${firstName}, your growth your future</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About us</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="making_sure_your_connection_is_secure">Making sure your connection is secure</string>
    <string name="cancel">Cancel Button</string>
    <string name="spenndify_blue_logo">Spenndify blue logo</string>
    <string name="verifying_your_account">Verifying your Account</string>
    <string name="hey_there_we_love_new_ncustomers_let_s_get_to_know_you">Hey there! We love new\nCustomers let\'s get to know you</string>
    <string name="go_back">Go Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_number">ID Number</string>
    <string name="email_address">Email address</string>
    <string name="please_fill_in_the_following_details">Please fill in the following details</string>
    <string name="welcome_to_spenndify">Welcome to Spenndify</string>
    <string name="manage_your_finances_with_ease_from_none_place">Manage your finances with ease from\nOne place</string>
    <string name="let_s_check_whether_you_have_an_account">Let’s check whether you Have an account</string>
    <string name="please_input_answer">Please input answer</string>
    <string name="give_your_answer_here">Give your answer here</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="forgot_pin">Forgot pin?</string>
    <string name="select_category">Select Category</string>
    <string name="sms_permission">We need you to allow Spenndify to read and upload select transaction message logs from your mobile device, you will access well formatted and organised important financial transaction informations and related analysis.\n \nWith your permission, we will only read transactions notification messages originating from Mpesa and any bank within Kenya. \n \nUpon your consent copies of your messages also serve as secondary back-up and would still be available if you changed your device and re-authenticated your account details on a new device with a new installation of the app. \n \nYou may choose to delete such messages from our servers yourself, through the app at any time, or send us a request to delete such information using the contact details provided in our data privacy policy.\n \nWe will not share or disclose your financial transactions message logs to third parties without your consent or for any purposes outlined in this privacy policy and/ our terms and conditions. \nPlease read full Data privacy policy</string>
    <string name="read_sms_permission">Read SMS permission</string>
    <string name="financial_transaction_message_logs">Financial transaction message logs(SMS)</string>
    <string name="sms_consent">I consent to giving spenndify permission to read my mesa and bank messages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>