<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group_1">

    <Button
        android:id="@+id/Contact_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="90dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/call"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/contact_us"
        android:textAllCaps="false"
        android:textColor="#FBFBFB"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="229dp"
        android:contentDescription="@string/spenndify_white_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spenndify_white_logo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="236dp"
        android:contentDescription="@string/profile_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/group_10831" />

    <TextView
        android:id="@+id/welcome_txt_TV"
        android:layout_width="203dp"
        android:layout_height="97dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/good_morning_steve_your_growth_your_future"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/login2_btn"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="232dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toEndOf="@+id/welcome_txt_TV" />

    <Button
        android:id="@+id/help_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginBottom="90dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/help__1_"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textColor="#FBFBFB"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/About_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/about"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/about_us"
        android:textAllCaps="false"
        android:textColor="#FBFBFB"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Contact_btn"
        app:layout_constraintStart_toEndOf="@+id/help_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>