<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/AppBottomSheetDialogTheme">

    <ImageButton
        android:id="@+id/cancel_ea_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:paddingTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/amount_input"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mask_group_1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/amount_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cancel_ea_btn"
        android:layout_centerInParent="true"
        android:fontFamily="@font/nunito_sans_bold"
        android:hint="Enter Amount"
        android:inputType="number"
        android:padding="60dp"
        android:textColor="@color/unnamed_color_03045e"
        android:textSize="32sp" />

    <Button
        android:id="@+id/continue_ea_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_pad"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/continue_btn"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="Continue"
        android:textAllCaps="false" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/number_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amount_input">

        <Button
            android:id="@+id/btn_one"
            style="@style/keypad_buttons_style"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_1"
            app:layout_constraintBottom_toTopOf="@+id/btn_four"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_two"
            style="@style/keypad_buttons_style"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_2"
            app:layout_constraintBottom_toTopOf="@+id/btn_five"
            app:layout_constraintEnd_toStartOf="@+id/btn_three"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_one" />

        <Button
            android:id="@+id/btn_three"
            style="@style/keypad_buttons_style"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_3"
            app:layout_constraintBottom_toTopOf="@+id/btn_six"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_four"
            style="@style/keypad_buttons_style"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@+id/btn_seven"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_five"
            style="@style/keypad_buttons_style"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_5"
            app:layout_constraintBottom_toTopOf="@+id/btn_eight"
            app:layout_constraintEnd_toStartOf="@+id/btn_six"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toEndOf="@+id/btn_four" />

        <Button
            android:id="@+id/btn_six"
            style="@style/keypad_buttons_style"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_6"
            app:layout_constraintBottom_toTopOf="@+id/btn_nine"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_seven"
            style="@style/keypad_buttons_style"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="128dp"
            android:text="@string/_7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_eight"
            style="@style/keypad_buttons_style"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_8"
            app:layout_constraintBottom_toTopOf="@+id/btn_zero"
            app:layout_constraintEnd_toStartOf="@+id/btn_nine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_seven" />

        <Button
            android:id="@+id/btn_nine"
            style="@style/keypad_buttons_style"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_9"
            app:layout_constraintBottom_toTopOf="@+id/btn_delete"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_zero"
            style="@style/keypad_buttons_style"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginBottom="57dp"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btn_delete"
            style="@style/keypad_buttons_style"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="57dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/group_189" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>